examples/test/testpolicy1141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1141
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key8: value44
      key32: value2
      key20: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value20
          key15: value21
          key14: value24
      podSelector:
        matchLabels:
          key15: value34
